src/validation/tests/snapshots/rusty__validation__tests__duplicates_validation_test__duplicate_enum_variables.snap
---
source: src/validation/tests/duplicates_validation_test.rs
expression: "&diagnostics"
---
error[E004]: red: Duplicate symbol.
  ┌─ <internal>:2:27
  │
2 │             TYPE enum1 : (red, green, yellow, red); END_TYPE
  │                           ^^^                 --- see also
  │                           │                    
  │                           red: Duplicate symbol.

error[E004]: red: Duplicate symbol.
  ┌─ <internal>:2:47
  │
2 │             TYPE enum1 : (red, green, yellow, red); END_TYPE
  │                           ---                 ^^^ red: Duplicate symbol.
  │                           │                    
  │                           see also
